Correct footer in Dark mode

--- a/workFolder/week02/main-page/src/scss/global/_general.scss
+++ b/workFolder/week02/main-page/src/scss/global/_general.scss
@@ -21,12 +21,7 @@ main {
     .wrapper {
         justify-content: center;
     }
-    section {
-      width: 100%;
-      h3 {
-        font-size: 14px;
-      }
-    }
+
   }
 }
 
